[tool.poetry]
name = "temptree"
version = "0.1.2"
description = "Generates temporary files and directories from a tree"
license = "GPL-3.0-or-later"
authors = ["Damien Flament <damien.flament@gmx.com>"]
repository = "https://github.com/neimad/temptree"
documentation = "https://neimad.github.io/temptree"
readme = "README.md"

keywords = ["temporary", "filesystem", "doctest"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Testing"
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
flake8-bugbear = "^19.3"
pydocstyle = "<4" # Fix `tokenize_open` issue
flake8-docstrings = "^1.3"
flake8-import-order = "^0.18.1"
pdoc3 = "^0.6.3"
invoke = "^1.3"
doc8 = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
