[tool.poetry]
name = "temptree"
version = "0.2.1"
description = "Generates temporary files and directories from a tree"
license = "GPL-3.0-or-later"
authors = ["Damien Flament <damien.flament@gmx.com>"]
repository = "https://github.com/neimad/temptree"
documentation = "https://neimad.github.io/temptree"
readme = "README.md"

keywords = ["temporary", "filesystem", "doctest"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "~3.6 | ~3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
invoke = "^1.3"
pytest = "^5.0"
pytest-cov = "^2.7"
hypothesis = "^4.36"
flake8 = "^3.7"
flake8-bugbear = "^19.3"
flake8-docstrings = "^1.3"
pdoc3 = "^0.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
